static/styles/zulip.css
/* ... */
.unread .unread_marker {
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    opacity: 1;
}

.unread_marker.slow_fade {
    -webkit-transition: all 2s ease-out;
    -moz-transition: all 2s ease-out;
    -o-transition: all 2s ease-out;
    transition: all 2s ease-out;
}

.unread_marker.fast_fade {
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}

.selected_message .messagebox {
    z-index: 1;
}

.selected_message .messagebox-content {
    box-shadow: inset 0px 0px 0px 2px #4577bc,
                     -1px -1px 0px 0px #4577bc,
                      1px 1px 0px 0px #4577bc,
                     -1px 1px 0px 0px #4577bc,
                      1px -1px 0px 0px #4577bc;
}

.message_sender {
    height: 0px;
    vertical-align: top;
    position: relative;
}

.sender_name {
    color: #333;
    display: inline-block;
    font-weight: 700;
    vertical-align: top;
    line-height: 12px;
    font-size: 14px;
    margin-left: -3px;
}

.sender-status {
    display: block;
    left: 46px;
    top: -26px;
    padding-bottom: 6px;
    padding-right: 35px;
    vertical-align: middle;
    line-height: 18px;
    font-size: 14px;
    position: relative;
}

.message_controls.sender-status-controls {
    top: 10px;
}

.sender_name-in-status {
    margin-right: 3px;
    font-weight: 700;
}

.sender_name_hovered .sender_name,
.sender_name_hovered .sender_name-in-status {
    color: #0088CC;
}

.sender_name_hovered .inline_profile_picture {
    border-color: #0088CC;
}

.message_sender .bot-icon {
    position: relative;
    vertical-align: top;
    top: -4px;

    height: 20px;
    width: 20px;
}

.message_sender .sender-status .bot-icon {
    top: -1px;
    margin-left: -3px;
}

.actions_hover:hover {
    color: #0088CC;
}

.message_failed,
.message_local {
    display: inline-block;
    cursor: pointer;
    font-size: 13px;
}

.message_failed {
    font-weight: bold;
    color: red;
    position: relative;
}

a.message_label_clickable:hover {
    cursor: pointer;
    color: #08C;
}

.on_hover_topic_edit {
    opacity: .1;
}

.always_visible_topic_edit {
    opacity: .7;
}

.on_hover_topic_edit:hover,
.always_visible_topic_edit:hover {
    cursor: pointer;
    opacity: 1.0;
}

.on_hover_topic_mute {
    opacity: .1;
}

.on_hover_topic_mute:hover {
    cursor: pointer;
    opacity: 1.0;
}

.edit_content {
    width: 12px;
    display: inline-block;
    position: relative;
    color: #bbb;
}

.edit_content:hover {
    cursor: pointer;
    color: #0088CC;
}

.reactions_hover {
    display: inline-block;
    position: relative;
    color: #bbb;
}

.reactions_hover:hover {
    color: #0088CC;
}

.message_hovered .reactions_hover,
.has_reactions_popover .reactions_hover {
    opacity: 1;
}

.message_hovered .info,
.has_actions_popover .info,
.message_hovered .empty-star {
    opacity: 1;
}

/* Brighten text because of the dark background */
.dark_background a,
.dark_background a:hover,
a.dark_background:hover,
.dark_background {
    color: #ffffff !important;
}

.dark_background a.message_label_clickable:hover {
    color: #3BF;
}

.message_top_line {
    position: relative;
}

.include-sender .message_top_line {
    margin-top: 6px;
}

.message-right {
    float: right;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.actions_hovered .message_time,
.actions_hovered .info {
    color: #0088CC;
    cursor: pointer;
}

.info {
    display: inline-block;
    position: relative;
    font-size: 15px;
    color: #bbb;
}

.actions_hovered .actions_link {
    text-decoration: underline;
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

.message_row {
    position: relative;
    border-left: 1px solid #e2e2e2;
    border-right: 1px solid #e2e2e2;
}

.message_row.selected_message {
    z-index: 2;
}

div.focused_table {
    display: block;
}

.include-sender .message_content {
    margin-top: -16px;
}

.message_content {
    line-height: 17px;
    font-size: 14px;
    padding-left: 46px;
    display: block;
    position: relative;
}

.message_edit_content {
    line-height: 18px;
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: #a1a1a1;
}

.message_edit_tooltip {
    display: inline;
    color: #a1a1a1;
}

.message-edit-timer-control-group {
    float: right;
    display: none;
}

.topic_edit {
    display: none;
    line-height: 22px;
}

#inline_topic_edit,
#message_edit_topic {
    margin-bottom: 5px;
}

#inline_topic_edit.header-v {
    height: 18px;
    display: inline-block;
    margin: -2px 0 0 0;
    padding: 0px 3px;

    line-height: 0px;
    font-size: 14px;

    border-radius: 0px;
    border: 1px solid #afbfca;
    box-shadow: none;
}

#inline_topic_edit:focus,
#message_edit_topic:focus {
    outline: none;
}

.message_edit_topic_propagate {
    display: inline-block;
    width: 300px;
    margin-bottom: 5px !important;
    max-width: 100%;
}

#message-edit-history .message_author {
    position: relative;
}

#message-edit-history .author_details {
    display: block;
    font-size: 12px;
    vertical-align: middle;
    padding: 1px;
    font-weight: 300;
    position: absolute;
    right: -80px;
    line-height: 20px;
    text-align: right;
}

.message_content.condensed {
    max-height: 8.5em;
    overflow: hidden;
}
.message_content.collapsed {
    max-height: 0em;
    overflow: hidden;
}

.message_length_controller {
    display: none;
    text-align: center;
    color: #0088CC;

    /* to match .message_content */
    margin-left: 5px;
    margin-right: 35px;
    /* to make message-uncollapse easier */
    margin-top: 10px;
}

.message_length_controller:hover {
    text-decoration: underline;
}
/* ... */

